ref #36 Fix listview cell wrap for IE

--- a/creme/creme_core/static/chantilly/creme_core/css/list_view.css
+++ b/creme/creme_core/static/chantilly/creme_core/css/list_view.css
@@ -361,7 +361,8 @@
 
 .list_view .cl_lv {
     word-wrap: break-word;
-    /*max-width: 120px;*/
+    max-width: 200px;
+    min-width: 120px;
     white-space:normal;
 }
 
@@ -387,6 +388,7 @@
 }
 
 .list_view tbody .lv-cell-content {
+    flex-basis: 200px;  /* IE Fix */
     -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
