--- a/creme/creme_core/static/icecream/creme_core/css/list_view.css
+++ b/creme/creme_core/static/icecream/creme_core/css/list_view.css
@@ -474,6 +474,7 @@
 .list_view .cl_lv {
     word-wrap: break-word;
     max-width: 200px;
+    min-width: 100px;
     white-space:normal;
 }
 
@@ -495,6 +496,7 @@
 }
 
 .list_view tbody .lv-cell-content {
+    flex-basis: 200px;  /* IE Fix */
     -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
